# ChatGemma

./: .gitignore  CLAUDE.md  gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: llama_jni.cpp
app/src/main/java/com/chatgemma/app/: ChatGemmaApplication.kt  MainActivity.kt
app/src/main/java/com/chatgemma/app/ai/: GemmaInferenceEngine.kt  GemmaInferenceEngineImpl.kt  HybridInferenceEngine.kt  LiteRtInferenceEngine.kt  LlamaCppInferenceEngine.kt  PromptBuilder.kt  VideoFrameExtractor.kt
app/src/main/java/com/chatgemma/app/data/preferences/: AppPreferences.kt
app/src/main/java/com/chatgemma/app/data/repository/: ChatRepository.kt  ChatRepositoryImpl.kt  ModelRepository.kt  ModelRepositoryImpl.kt  TopicRepository.kt  TopicRepositoryImpl.kt
app/src/main/java/com/chatgemma/app/di/: AiModule.kt  DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt  WorkerModule.kt
app/src/main/java/com/chatgemma/app/domain/model/: ArchivedTopic.kt  Branch.kt  InferenceParams.kt  Message.kt  ModelVersion.kt  Session.kt  Topic.kt
app/src/main/java/com/chatgemma/app/service/: SpeechService.kt
app/src/main/java/com/chatgemma/app/ui/navigation/: NavGraph.kt  Screen.kt
app/src/main/java/com/chatgemma/app/worker/: ModelDownloadWorker.kt  ModelUpdateCheckWorker.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
(+52 files in other folders)
